アドオンマネージャーの国際化 (Support i18n) (#7)
* angular-translateを導入する

`bower install --production`のみを実行する
依存関係解決が割と大変なので、Angularを1系の最新まで上げたい

* angular-translateの初期化処理と切り替え処理の仮実装

* angular-translateでの言語切替処理の仮実装

* アドオン欄のi18n化

* 不要なファイルを削除

Featureはすで使用されていないため

* index.htmlのi18n化

* 検索欄のi18n化

* すでに使用されていないルーティングを削除

* 設定ページのi18n化

* titleはi18n化しない

* 翻訳済みのメッセージを入れる

* AppVeyorでコミットごとに自動パッケージングするようにする

* 開発者ツールを非表示にし、各種コードを動くようにする

* パッケージングする時はasar化する

* appveyor.ymlを分かりやすいように書き換える

* packageスクリプトをより詳細にする

* 英語訳を仮に入れる

--- a/views/addon.html
+++ b/views/addon.html
@@ -3,10 +3,10 @@
 		<md-card-title-text>
 			<span class="md-headline">{{vm.addon.name}}
 			<md-button data-ng-click="openWebsite(vm.addon);" class="md-fab" aria-label="github">
-    			<img src="img/GitHub-Mark-64px.png" style="my-img-button" alt="github">
+					<img src="img/GitHub-Mark-64px.png" style="my-img-button" alt="github">
 			</md-button>
 			<md-button class="md-fab"data-ng-show="vm.addon.existTwitterAccount" data-ng-click="openTwitter(vm.addon);" aria-label="twitter">
-    			 <img src="img/twitter.png" style="my-img-button" alt="twitter">
+					 <img src="img/twitter.png" style="my-img-button" alt="twitter">
 			</md-button>
 			</span>
 			<span class="md-subhead">{{vm.addon.author}}</span>
@@ -28,15 +28,15 @@
 		</md-card-title-media>
 	</md-card-title>
 	<md-card-actions layout="row" layout-align="end center">
-		<md-button  data-ng-show="vm.addon.isNew" class="md-raised" data-ng-click="openReadme(vm.addon);">New</md-button>
-		<md-button  data-ng-show="!vm.addon.isShowReadme" class="md-raised" data-ng-click="openReadme(vm.addon);">詳細</md-button>
-		<md-button  data-ng-show="vm.addon.isShowReadme"  class="md-raised" data-ng-click="closeReadme(vm.addon);">閉じる</md-button>
+		<md-button	data-ng-show="vm.addon.isNew" class="md-raised" data-ng-click="openReadme(vm.addon);">New</md-button>
+		<md-button	data-ng-show="!vm.addon.isShowReadme" class="md-raised" data-ng-click="openReadme(vm.addon);">{{ 'ADDONS.README' | translate }}</md-button>
+		<md-button	data-ng-show="vm.addon.isShowReadme"	class="md-raised" data-ng-click="closeReadme(vm.addon);">{{ 'ADDONS.CLOSE_README' | translate }}</md-button>
 
 		<!--<md-button style="background-color:#55acee" >Twitter</md-button>-->
 		<!--<md-button data-ng-click="openWebsite(vm.addon);" class="md-raised">GitHub</md-button>-->
-		<md-button data-ng-click="install(vm.addon);" class="md-raised md-primary" data-ng-class="{'md-warn': vm.addon.failedInstall}" data-ng-show="!vm.addon.isDownloading && !vm.addon.isInstalled">Install</md-button>
-		<md-button data-ng-click="update(vm.addon);" class="md-raised md-accent" data-ng-class="{'md-warn': vm.addon.failedInstall}" data-ng-show="vm.addon.isUpdateAvailable && vm.addon.isInstalled">Update</md-button>
-		<md-button data-ng-click="uninstall(vm.addon);" class="md-raised md-warn" data-ng-show="vm.addon.isInstalled && !vm.addon.failedInstall">Uninstall</md-button>
+		<md-button data-ng-click="install(vm.addon);" class="md-raised md-primary" data-ng-class="{'md-warn': vm.addon.failedInstall}" data-ng-show="!vm.addon.isDownloading && !vm.addon.isInstalled">{{ 'ADDONS.INSTALL' | translate }}</md-button>
+		<md-button data-ng-click="update(vm.addon);" class="md-raised md-accent" data-ng-class="{'md-warn': vm.addon.failedInstall}" data-ng-show="vm.addon.isUpdateAvailable && vm.addon.isInstalled">{{ 'ADDONS.UPDATE' | translate }}</md-button>
+		<md-button data-ng-click="uninstall(vm.addon);" class="md-raised md-warn" data-ng-show="vm.addon.isInstalled && !vm.addon.failedInstall">{{ 'ADDONS.UNINSTALL' | translate }}</md-button>
 		<md-progress-circular md-mode="indeterminate" data-ng-show="vm.addon.isDownloading"></md-progress-circular>
 	</md-card-actions>
 </md-card>
