--- a/views/browse.html
+++ b/views/browse.html
@@ -1,33 +1,33 @@
-		
+
 
 <div layout="column" layout-padding>
 	<md-card style="height:65px" md-whiteframe="3">
 		<md-input-container  class="md-block">
-			<label><img id = "search"src="img/search.png"  alt="search">Search</label>
+			<label><img id = "search"src="img/search.png"  alt="search">{{ 'BROWSE.SEARCH' | translate }}</label>
 			<input data-ng-model="browseController.searchQuery">
 		</md-input-container>
 	</md-card>
-	<md-card  md-whiteframe="3">
+	<md-card	md-whiteframe="3">
 	<div layout="row"　layout-align=" center">
 		<md-radio-group layout="row" ng-model="browseController.isInstalled">
-			<md-radio-button data-ng-value="undefined" class="md-primary">All</md-radio-button>
-			<md-radio-button data-ng-value="true">Installed</md-radio-button>
-			<md-radio-button data-ng-value="false">Uninstalled</md-radio-button>
+			<md-radio-button data-ng-value="undefined" class="md-primary">{{ 'BROWSE.ALL' | translate}}</md-radio-button>
+			<md-radio-button data-ng-value="true">{{ 'BROWSE.INSTALLED' | translate }}</md-radio-button>
+			<md-radio-button data-ng-value="false">{{ 'BROWSE.UNINSTALLED' | translate }}</md-radio-button>
 		</md-radio-group>
 	</div>
 	<br>
 	<div layout="row">
-		<md-checkbox flex ng-model="browseController.isUpdateAvailable" aria-label="Is update available?">UPDATEのみを表示する</md-checkbox>
-		<md-button flex class="md-raised" style="float:left"data-ng-click="updateAllAddons()">全てのアドオンを更新する</md-button>			
+		<md-checkbox flex ng-model="browseController.isUpdateAvailable" aria-label="Is update available?">{{ 'BROWSE.SHOW_ONLY_UPDATABLE' | translate }}</md-checkbox>
+		<md-button flex class="md-raised" style="float:left"data-ng-click="updateAllAddons()">{{ 'BROWSE.UPDATE_ALL_ADDONS' | translate }}</md-button>
 	</div>
 	<br>
 	<div layout="row">
 		<md-radio-group layout="row" ng-model="browseController.sort">
-			<md-radio-button data-ng-value="'name'">名前(昇順)</md-radio-button>
-			<md-radio-button data-ng-value="'-name'">名前(降順)</md-radio-button>
-			<md-radio-button data-ng-value="'date'">日付(昇順)</md-radio-button>
-			<md-radio-button data-ng-value="'-date'">日付(降順)</md-radio-button>
-			<md-radio-button data-ng-value="'author'">開発者</md-radio-button>
+			<md-radio-button data-ng-value="'name'">{{ 'BROWSE.SORT_BY_NAME_ASC' | translate }}</md-radio-button>
+			<md-radio-button data-ng-value="'-name'">{{ 'BROWSE.SORT_BY_NAME_DESC' | translate }}</md-radio-button>
+			<md-radio-button data-ng-value="'date'">{{ 'BROWSE.SORT_BY_DATE_ASC' | translate }}</md-radio-button>
+			<md-radio-button data-ng-value="'-date'">{{ 'BROWSE.SORT_BY_DATE_DESC' | translate }}</md-radio-button>
+			<md-radio-button data-ng-value="'author'">{{ 'BROWSE.SORT_BY_DEVELOPER_NAME' | translate }}</md-radio-button>
 		</md-radio-group>
 	</div>
 	</md-card>
