--- a/views/browse.html
+++ b/views/browse.html
@@ -6,32 +6,41 @@
 		</md-input-container>
 	</md-card>
 	<md-card	md-whiteframe="3">
-	<div layout="row"　layout-align=" center">
-		<md-radio-group layout="row" ng-model="browseController.isInstalled">
-			<md-radio-button data-ng-value="undefined" class="md-primary">{{ 'BROWSE.ALL' | translate}}</md-radio-button>
-			<md-radio-button data-ng-value="true">{{ 'BROWSE.INSTALLED' | translate }}</md-radio-button>
-			<md-radio-button data-ng-value="false">{{ 'BROWSE.UNINSTALLED' | translate }}</md-radio-button>
-		</md-radio-group>
-	</div>
-	<br>
-	<div layout="row">
-		<md-checkbox flex ng-model="browseController.isUpdateAvailable" aria-label="Is update available?">{{ 'BROWSE.SHOW_ONLY_UPDATABLE' | translate }}</md-checkbox>
-		<md-button flex class="md-raised" style="float:left"data-ng-click="updateAllAddons()">{{ 'BROWSE.UPDATE_ALL_ADDONS' | translate }}</md-button>
-	</div>
-	<br>
-	<div layout="row">
-		<md-radio-group layout="row" ng-model="browseController.sort">
-			<md-radio-button data-ng-value="'name'">{{ 'BROWSE.SORT_BY_NAME_ASC' | translate }}</md-radio-button>
-			<md-radio-button data-ng-value="'-name'">{{ 'BROWSE.SORT_BY_NAME_DESC' | translate }}</md-radio-button>
-			<md-radio-button data-ng-value="'date'">{{ 'BROWSE.SORT_BY_DATE_ASC' | translate }}</md-radio-button>
-			<md-radio-button data-ng-value="'-date'">{{ 'BROWSE.SORT_BY_DATE_DESC' | translate }}</md-radio-button>
-			<md-radio-button data-ng-value="'author'">{{ 'BROWSE.SORT_BY_DEVELOPER_NAME' | translate }}</md-radio-button>
-		</md-radio-group>
-	</div>
+		<div layout="row"　layout-align=" center">
+			<md-radio-group layout="row" ng-model="browseController.isInstalled">
+				<md-radio-button data-ng-value="undefined" class="md-primary">{{ 'BROWSE.ALL' | translate}}</md-radio-button>
+				<md-radio-button data-ng-value="true">{{ 'BROWSE.INSTALLED' | translate }}</md-radio-button>
+				<md-radio-button data-ng-value="false">{{ 'BROWSE.UNINSTALLED' | translate }}</md-radio-button>
+			</md-radio-group>
+		</div>
+		<br>
+		<div layout="row">
+			<md-checkbox flex ng-model="browseController.isUpdateAvailable" aria-label="Is update available?">{{ 'BROWSE.SHOW_ONLY_UPDATABLE' | translate }}</md-checkbox>
+			<md-button flex class="md-raised" style="float:left"data-ng-click="updateAllAddons()">{{ 'BROWSE.UPDATE_ALL_ADDONS' | translate }}</md-button>
+		</div>
+		<br>
+		<div layout="row">
+			<md-radio-group layout="row" ng-model="browseController.sort">
+				<md-radio-button data-ng-value="'name'">{{ 'BROWSE.SORT_BY_NAME_ASC' | translate }}</md-radio-button>
+				<md-radio-button data-ng-value="'-name'">{{ 'BROWSE.SORT_BY_NAME_DESC' | translate }}</md-radio-button>
+				<md-radio-button data-ng-value="'date'">{{ 'BROWSE.SORT_BY_DATE_ASC' | translate }}</md-radio-button>
+				<md-radio-button data-ng-value="'-date'">{{ 'BROWSE.SORT_BY_DATE_DESC' | translate }}</md-radio-button>
+				<md-radio-button data-ng-value="'author'">{{ 'BROWSE.SORT_BY_DEVELOPER_NAME' | translate }}</md-radio-button>
+			</md-radio-group>
+		</div>
+		<div layout="row">
+			<md-radio-group layout="row" ng-model="browseController.col"  ng-change="browseController.changeCol()">
+				<md-radio-button data-ng-value="'100'">1</md-radio-button>
+				<md-radio-button data-ng-value="'50'">2</md-radio-button>
+				<md-radio-button data-ng-value="'33'">3</md-radio-button>
+				<md-radio-button data-ng-value="'25'">4</md-radio-button>
+			</md-radio-group>
+		</div>
 	</md-card>
-
-	<div data-ng-repeat="addon in browseController.addons | orderBy:browseController.sort | filter:{ isUpdateAvailable: browseController.isUpdateAvailable, isInstalled: browseController.isInstalled } | filter:browseController.searchQuery">
-		<addon addon="addon"></addon>
+	<div layout="row" layout-wrap>
+		<div flex="{{browseController.col}}" data-ng-repeat="addon in browseController.addons | orderBy:browseController.sort | filter:{ isUpdateAvailable: browseController.isUpdateAvailable, isInstalled: browseController.isInstalled } | filter:browseController.searchQuery">
+			<addon addon="addon"></addon>
+		</div>
 	</div>
 </div>
 
