--- a/views/addon_small.html
+++ b/views/addon_small.html
@@ -1,79 +1,82 @@
 <md-card md-whiteframe="3" id="{{vm.addon.name}}">
 	<md-card-title>
 		<md-card-title-text>
-			<span class="md-headlines"><md-tooltip md-direction="bottom">{{vm.addon.name}}<br/>{{vm.addon.description}}</md-tooltip>
-				{{ vm.addon.shortname }}
+			<span class="md-headlines" style="display:inline-block;">
+				<span class="md-headlines"><md-tooltip md-direction="bottom" ><div ng-bind-html="vm.addon.nameSce"></div><br/><div ng-bind-html="vm.addon.descriptionSce"></div></md-tooltip>
+					{{ vm.addon.shortname }}
+					<span class="md-subhead">
+						 by {{vm.addon.author}} - {{vm.addon.fileVersion}} 
+					</span>
+				</span>
 				<span class="md-subhead">
-					 by {{vm.addon.author}} - {{vm.addon.fileVersion}}
+					<md-menu>
+						<md-button aria-label="addondropdown" ng-style="photo.ovstyle" class="md-icon-button" ng-click="openDropdownMenu($mdOpenMenu, $event)">
+							<md-tooltip md-direction="bottom">Version select</md-tooltip>
+							<img ng-src="{{ photo.dropdn }}" ng-style="photo.style">
+						</md-button>
+						<md-menu-content width="6">
+							<md-menu-item ng-repeat="item in vm.addon.addons">
+								<md-button ng-click="selectDropdown( item.obj )">
+									{{item.name}}
+								</md-button>
+							</md-menu-item>
+						</md-menu-content>
+					</md-menu>
+					<md-button	data-ng-show="vm.addon.isNew" class="md-raised" data-ng-click="openReadme(vm.addon);">New</md-button>
 				</span>
 
 
-			<!--<select ng-model="selectedAddon">
-			<option ng-repeat="x in vm.addon.addons" value="{{x.name}}">{{x.name}}</option>
-			</select>-->
+
+				</span>
+				<span class="md-body-1">
+
+					Last Update: {{vm.addon.dateParsed}} 
+					<span class="md-body-1" data-ng-show="vm.addon.isInstalled">Installed version: {{vm.addon.installedFileVersion}}</span>
+					<span class="md-body-2">
+				</span>
 			</span>
 			<span class="md-body-1">
 				<md-button data-ng-click="openWebsite(vm.addon);" ng-style="photo.ovstyle" class="md-icon-button" aria-label="github">
-						<img ng-src="{{ photo.github }}" ng-style="photo.style" alt="github">
-					</md-button>
-					<md-button  data-ng-show="vm.addon.existTwitterAccount" ng-style="photo.ovstyle" class="md-icon-button" data-ng-click="openTwitter(vm.addon);" aria-label="twitter">
-						 <img ng-src="{{ photo.twitter }}" ng-style="photo.style" alt="twitter">
-					</md-button>
-			<md-menu>
-				Version: <md-button aria-label="addondropdown" ng-style="photo.ovstyle" class="md-icon-button" ng-click="openDropdownMenu($mdOpenMenu, $event)">
-					<img ng-src="{{ photo.dropdn }}" ng-style="photo.style">
+					<img ng-src="{{ photo.github }}" ng-style="photo.style" alt="github">
 				</md-button>
-				<md-menu-content width="6">
-					<md-menu-item ng-repeat="item in vm.addon.addons">
-						<md-button ng-click="selectDropdown( item.obj )">
-							{{item.name}}
-						</md-button>
-					</md-menu-item>
-				</md-menu-content>
-			</md-menu>
+				<md-button  data-ng-show="vm.addon.existTwitterAccount" ng-style="photo.ovstyle" class="md-icon-button" data-ng-click="openTwitter(vm.addon);" aria-label="twitter">
+					 <img ng-src="{{ photo.twitter }}" ng-style="photo.style" alt="twitter">
+				</md-button>
 
-			<!--You selected: {{selectedAddon}}-->
-			
-			<!--<span class="md-subhead">{{vm.addon.author}} {{vm.addon.dateParsed}}</span>-->
-			<span class="md-body-1" data-ng-show="vm.addon.isInstalled">Installed version: {{vm.addon.installedFileVersion}}</span>
-			<span class="md-body-1">
+				<span style="float:right;">
 
+					<md-progress-circular md-mode="indeterminate" data-ng-show="vm.addon.isDownloading"></md-progress-circular>
+					<md-button data-ng-click="install(vm.addon);" aria-label="download" class="md-icon-button md-primary" data-ng-class="{'md-warn': vm.addon.failedInstall}" data-ng-show="!vm.addon.isDownloading && !vm.addon.isInstalled">
+						<md-tooltip md-direction="bottom">
+							{{ 'ADDONS.INSTALL' | translate }}
+						</md-tooltip>
+						<img ng-src="{{ buttons.download }}" ng-style="buttons.style" alt="download">
+					</md-button>
+					<md-button data-ng-click="update(vm.addon);" class="md-icon-button md-primary" data-ng-show="vm.addon.isUpdateAvailable && vm.addon.isInstalled">
+						<md-tooltip md-direction="bottom">
+							{{ 'ADDONS.UPDATE' | translate }}
+						</md-tooltip>
+						<img ng-src="{{ buttons.update }}" ng-style="buttons.style" alt="uninstall">
+					</md-button>
+					<md-button data-ng-click="uninstall(vm.addon);" class="md-icon-button md-primary" aria-label="uninstall" data-ng-show="vm.addon.isInstalled && !vm.addon.failedInstall">
+						<md-tooltip md-direction="bottom">
+							{{ 'ADDONS.UNINSTALL' | translate }}
+						</md-tooltip>
+						<img ng-src="{{ buttons.uninstall }}" ng-style="buttons.style" alt="uninstall">
+					</md-button>
 
-		<md-button	data-ng-show="vm.addon.isNew" class="md-raised" data-ng-click="openReadme(vm.addon);">New</md-button>
-		<md-button	aria-label="more" class="md-icon-button md-primary" data-ng-click="changeToBig(vm.addon);">
-			<md-tooltip md-direction="bottom">
-				More
-			</md-tooltip>
-			<img ng-src="{{ buttons.more }}" ng-style="buttons.style" alt="more">
-		</md-button>
-
-		<!--<md-button style="background-color:#55acee" >Twitter</md-button>-->
-		<!--<md-button data-ng-click="openWebsite(vm.addon);" class="md-raised">GitHub</md-button>-->
-		<md-button data-ng-click="install(vm.addon);" aria-label="download" class="md-icon-button md-primary" data-ng-class="{'md-warn': vm.addon.failedInstall}" data-ng-show="!vm.addon.isDownloading && !vm.addon.isInstalled">
-			<md-tooltip md-direction="bottom">
-				{{ 'ADDONS.INSTALL' | translate }}
-			</md-tooltip>
-			<img ng-src="{{ buttons.download }}" ng-style="buttons.style" alt="download">
-		</md-button>
-		<md-button data-ng-click="update(vm.addon);" class="md-icon-button md-primary" data-ng-show="vm.addon.isUpdateAvailable && vm.addon.isInstalled">
-			<md-tooltip md-direction="bottom">
-				{{ 'ADDONS.UPDATE' | translate }}
-			</md-tooltip>
-			<img ng-src="{{ buttons.update }}" ng-style="buttons.style" alt="uninstall">
-		</md-button>
-		<md-button data-ng-click="uninstall(vm.addon);" class="md-icon-button md-primary" aria-label="uninstall" data-ng-show="vm.addon.isInstalled && !vm.addon.failedInstall">
-			<md-tooltip md-direction="bottom">
-				{{ 'ADDONS.UNINSTALL' | translate }}
-			</md-tooltip>
-			<img ng-src="{{ buttons.uninstall }}" ng-style="buttons.style" alt="uninstall">
-		</md-button>
-		<md-progress-circular md-mode="indeterminate" data-ng-show="vm.addon.isDownloading"></md-progress-circular>
-
+					<md-button	aria-label="more" class="md-icon-button md-primary" data-ng-click="changeToBig(vm.addon);">
+						<md-tooltip md-direction="bottom">
+							More
+						</md-tooltip>
+						<img ng-src="{{ buttons.more }}" ng-style="buttons.style" alt="more">
+					</md-button>
+				</span>
 
 			</span>
 			<span data-ng-show="vm.addon.failedInstall"><p class="error">Failed to install addon. Please contact <a href data-ng-click="openIssues(vm.addon);">{{vm.addon.author}}</a>.</p></span>
 			<span data-ng-show="vm.addon.uninstallError"><p class="error">Could not uninstall addon. Make sure the game is closed and then try again.</p></span>
-		</span>
+		
 		</md-card-title-text>
 	</md-card-title>
 </md-card>
