--- a/views/browse.html
+++ b/views/browse.html
@@ -16,7 +16,7 @@
 		<br>
 		<div layout="row">
 			<md-checkbox flex ng-model="browseController.isUpdateAvailable" aria-label="Is update available?">{{ 'BROWSE.SHOW_ONLY_UPDATABLE' | translate }}</md-checkbox>
-			<md-button flex class="md-raised" style="float:left"data-ng-click="updateAllAddons()">{{ 'BROWSE.UPDATE_ALL_ADDONS' | translate }}</md-button>
+			<md-button class="md-raised" style="float:left" data-ng-click="updateAllAddons()">{{ 'BROWSE.UPDATE_ALL_ADDONS' | translate }}</md-button>
 		</div>
 		<br>
 		<div layout="row">
@@ -28,22 +28,22 @@
 				<md-radio-button data-ng-value="'author'">{{ 'BROWSE.SORT_BY_DEVELOPER_NAME' | translate }}</md-radio-button>
 			</md-radio-group>
 		</div>
-		<div layout="row">
+		<!--<div layout="row">
 			<md-radio-group layout="row" ng-model="browseController.col"  ng-change="browseController.changeCol()">
 				<md-radio-button data-ng-value="'100'">1</md-radio-button>
 				<md-radio-button data-ng-value="'50'">2</md-radio-button>
 				<md-radio-button data-ng-value="'33'">3</md-radio-button>
 				<md-radio-button data-ng-value="'25'">4</md-radio-button>
 			</md-radio-group>
-		</div>
+		</div>-->
 	</md-card>
 
-	    <div layout="row" data-ng-show="browseController.addonsLoading" layout-sm="column" layout-align="center center" aria-label="wait" style="height:70px;">
-	   		<md-progress-circular md-mode="indeterminate" data-ng-show="browseController.addonsLoading"></md-progress-circular>
-	    </div>
+	<div layout="row" data-ng-show="browseController.addonsLoading" layout-sm="column" layout-align="center center" aria-label="wait" style="height:70px;">
+		<md-progress-circular md-mode="indeterminate" data-ng-show="browseController.addonsLoading"></md-progress-circular>
+	</div>
 
 	<div layout="row" layout-wrap>
-		<div flex="{{browseController.col}}" data-ng-repeat="addon in browseController.addons | orderBy:browseController.sort | filter:{ isUpdateAvailable: browseController.isUpdateAvailable, isInstalled: browseController.isInstalled } | filter: {name: browseController.searchQuery}">
+		<div flex="50" data-ng-repeat="addon in browseController.addons | orderBy:browseController.sort | filter:{ isUpdateAvailable: browseController.isUpdateAvailable, isInstalled: browseController.isInstalled } | filter: filterAll(browseController.searchQuery)">
 			<addon addon="addon"></addon>
 		</div>
 	</div>
