--- a/views/addon.html
+++ b/views/addon.html
@@ -2,7 +2,7 @@
 	<md-card-title>
 		<md-card-title-text>
 			<span class="md-headline">{{vm.addon.name}}
-			<md-button data-ng-click="openWebsite(vm.addon);" class="md-fab" aria-label="github">
+			<md-button data-ng-click="openWebsite(vm);" class="md-fab" aria-label="github">
 					<img src="img/GitHub-Mark-64px.png" style="my-img-button" alt="github">
 			</md-button>
 			<md-button class="md-fab"data-ng-show="vm.addon.existTwitterAccount" data-ng-click="openTwitter(vm.addon);" aria-label="twitter">
